--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,7 +7,11 @@
 
 // Customize the background color
 body {
+  background-image: url("/images/background.jpg");
+  background-repeat: no-repeat;
   background-color: #f2f2f2;;
+  background-size: cover;
+  background-position: center;
 }
 
 // Customize the menubar color
