--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -53,3 +53,98 @@
 
 </div>
 
+<!-- Adds background image  -->
+<style>
+body {
+ background-image: url("/images/background.jpg");
+  background-repeat: no-repeat;
+  background-color: #f2f2f2;;
+  background-size: cover;
+  background-position: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</style>
