--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -6,21 +6,17 @@
 // Here are some common customizations for colors
 
 // Customize the background color
-body {
-  background-image: url("/images/background.jpg");
-  background-repeat: no-repeat;
+body{
   background-color: #f2f2f2;;
-  background-size: cover;
-  background-position: center;
 }
 
 // Customize the menubar color
 .ui.menu {
-  background: lightskyblue;
+  background: lightsteelblue;
 }
 
 // Customize the home page icon colors
 .icon-color {
-  color: darken(lightsteelblue, 20%);
+  color: black;
 }
 
