--- a/_includes/test.html
+++ b/_includes/test.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 10px; " class="ui center aligned grid">
     <div class="middle aligned column">
-        <embed src="https://airyclam.github.io/images/cv.pdf" width="800px" height="700px"/>
+        <embed src=../images/cv.pdf width="800px" height="700px"/>
     </div>
 </div>
